# rag-pipeline

./: .env  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_ANALYSIS.md  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/api/routes/: __init__.py  chat.py  generate.py  health.py  index.py  index_from_url.py  retrieve.py  upload.py
app/core/: __init__.py  config.py  database.py  deps.py  logging.py  logging_config.py
app/models/: __init__.py  admin.py  logs.py  schemas.py
app/rag/: __init__.py  agent.py  chain.py  chunking.py  embeddings.py  loaders.py  retriever.py
app/routes/: __init__.py  admin.py  query.py
app/schemas/: __init__.py  admin.py  query.py  reindex.py
app/services/: __init__.py  auth.py  indexing.py  query.py  rag.py  vector_store.py
app/utils/: __init__.py  chroma_connection.py  prompts.py  text.py
backend/: env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  upload.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: schemas.py  user.py
backend/data/chroma/: chroma.sqlite3
data/: .gitkeep
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: login-form.tsx  theme-toggle.tsx
