[tool.poetry]
name = "bplus-rag-agent"
version = "0.1.0"
description = "Basic RAG API with FastAPI, LangChain, and ChromaDB."
authors = ["Biashara Plus AI <products@ipfsoftwares.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-openai = "^0.2.5"
chromadb = "^0.5.11"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
