[tool.poetry]
name = "bplus-rag-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-openai = "^0.3.11"
chromadb = "^0.5.11"
langchain-chroma = "^0.1.4"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
pypdf = "^5.1.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
